# clion-opencv-tutorials2

./: CMakeLists.txt
DoG/: DoG.cpp
LPFilter/: LPFilter.cpp
LoG/: LoG.cpp
Marr_Hildreth/: Marr_Hildreth.cpp
adaptive/: adaptiveThresh.cpp
affine/: rotate_OpenCV3.cpp  warpAffine.cpp
band/: bpFilter.cpp  brFilter.cpp  ihpFilter.cpp
bilateralFiltering/: BilateralFiltering.cpp  BilateralFilteringColor.cpp
bitwise/: bitwise_and.cpp
canny/: canny.cpp  canny_opencv.cpp
clahe/: clahe.cpp
color/: HLS.cpp  HSV.cpp
custom/: structrueNoise.cpp
dilate/: dilate.cpp
discrete/: conv2D.cpp  copyMakeBorder.cpp  sepConv2D_X_Y.cpp
entropy/: threshPun.cpp
equlization/: equalHist.cpp  histequlization_opencv.cpp
erode/: erode.cpp
fastMeanBlur/: fastMeanBlur.cpp
fft2/: fft2.cpp
fft2toConv/: fft2toConv.cpp
gamma/: gamma.cpp
gaussBlur/: gaussBlur.cpp
guidedFilter/: guidedFilter.cpp
houghLine/: HTLine.cpp
jointBilterFilter/: JointBilterFilter.cpp
kirsch/: kirsch.cpp
laplacian/: lap.cpp
line/: line.cpp
medianSmooth/: medianSmooth.cpp
normalize/: histNormalized.cpp  normalize.cpp  normalize_opencv.cpp
other/: morphologyEx.cpp
otsu/: otsu.cpp
outline/: ContourArea.cpp  convexityDefects.cpp  fillPoly.cpp  findContours.cpp  pointPolygonTest.cpp  thresh.cpp  threshold_OpenCV3.cpp
perspective/: perspective.cpp
pointSets/: RotatedRect.cpp  boxPoints_OpenCV3.cpp  convexHull.cpp  minEnclosingTriangle.cpp
polar/: linearPolar_OpenCV3.cpp  logPolar_OpenCV3.cpp  polar.cpp
prewitt/: prewitt.cpp
roberts/: roberts.cpp
saliencyMap/: saliencyMap.cpp
scharr/: scharr.cpp
sobel/: sobel.cpp
spectrum/: spectrum.cpp
twoPeaks/: threshTwoPeaks.cpp
